[package]
name = "deskhelp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = { version = "0.3.13", default-features = false }
time = { version = "0.3", features = ["formatting", "macros"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
once_cell = "1.20.2"
urlencoding = "2.1.3"
serde_json = "1"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = "0.3.0"

[dependencies.songbird]
version = "0.4"
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
    "framework",
]
version = "0.12.2"
